# gmail-yaml-filters

./: FILTER_MERGING.md  OPERATOR_INFERENCE.md  README.md  SPEC-xml-to-yaml.md  pyproject.toml  tox.ini
.claude/: settings.local.json
gmail_yaml_filters/: inference_safety.py  main.py  operator_inference.py  xml_converter.py
scripts/: compare_roundtrip.py  compare_xml.py  export_unsupported.py  verify_conversion.py
test_data/: cleaned_output.yaml  cleaned_output_report.txt  enhanced_output.yaml  enhanced_output_report.txt  exact.xml  mailFilters.xml  my_filters.yaml  restored.xml  roundtrip.xml  roundtrip_test.yaml  test_no_preserve.yaml  test_output.yaml  unsupported_filters.yaml
tests/: test_cli_commands.py  test_filter_merging_integration.py  test_inference_safety.py  test_main.py  test_operator_inference.py  test_xml_converter_coverage.py  test_xml_converter_enhancements.py
